<resources>
    <string name="app_name">E-Library</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>

</resources>