<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ImageView
        android:layout_width="163dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/stilogo6" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textColor="@color/sti"
        android:text="@string/register" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FirstName"
            android:hint="@string/first_name"
            android:background="@drawable/curvature"
            android:layout_width="265dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/Gray"
            android:inputType="text"
            android:ems="40"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LastName"
            android:hint="@string/last_name"
            android:background="@drawable/curvature"
            android:layout_width="265dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:backgroundTint="@color/Gray"
            android:ems="40"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:hint="@string/email"
            android:background="@drawable/curvature"
            android:layout_width="265dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:backgroundTint="@color/Gray"
            android:ems="40"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/curvature"
        android:backgroundTint="@color/Gray"
        android:ems="40"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/sti"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:background="@drawable/curvature"/>

    <TextView
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"/>
</LinearLayout>